# cxxProjectTemplate

./: CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  build.sh
common/: CMakeLists.txt
common/pkg/: libabsl_bad_any_cast_impl.so.20210324  libabsl_bad_optional_access.so.20210324.0.0  libabsl_bad_variant_access.so.20210324.0.0  libabsl_base.so.20210324  libabsl_city.so.20210324.0.0  libabsl_civil_time.so.20210324  libabsl_cord.so.20210324.0.0  libabsl_debugging_internal.so.20210324  libabsl_demangle_internal.so.20210324  libabsl_examine_stack.so.20210324.0.0  libabsl_exponential_biased.so.20210324.0.0  libabsl_failure_signal_handler.so.20210324  libabsl_flags_commandlineflag.so.20210324  libabsl_flags_commandlineflag_internal.so.20210324.0.0  libabsl_flags_config.so.20210324  libabsl_flags_internal.so.20210324.0.0  libabsl_flags_marshalling.so.20210324.0.0  libabsl_flags_parse.so.20210324  libabsl_flags_private_handle_accessor.so.20210324.0.0  libabsl_flags_program_name.so.20210324.0.0  libabsl_flags_reflection.so.20210324  libabsl_flags_usage.so.20210324.0.0  libabsl_flags_usage_internal.so.20210324  libabsl_graphcycles_internal.so.20210324.0.0  libabsl_hash.so.20210324  libabsl_hashtablez_sampler.so.20210324.0.0  libabsl_int128.so.20210324.0.0  libabsl_leak_check.so.20210324  libabsl_leak_check_disable.so.20210324.0.0  libabsl_log_severity.so.20210324  libabsl_malloc_internal.so.20210324.0.0  libabsl_periodic_sampler.so.20210324.0.0  libabsl_random_distributions.so.20210324.0.0  libabsl_random_internal_distribution_test_util.so.20210324.0.0  libabsl_random_internal_platform.so.20210324.0.0  libabsl_random_internal_pool_urbg.so.20210324  libabsl_random_internal_randen.so.20210324.0.0  libabsl_random_internal_randen_hwaes.so.20210324  libabsl_random_internal_randen_hwaes_impl.so.20210324.0.0  libabsl_random_internal_randen_slow.so.20210324  (+28 more)
common/src/exception/: CMakeLists.txt  exception.h
common/src/google/protobuf/: extension_set_inl.h  wire_format_lite.h
common/src/google/protobuf/stubs/: platform_macros.h
common/src/logger/: CMakeLists.txt  logger.cpp  logger.h
common/src/memory_pool/: CMakeLists.txt  memory_pool.h
common/src/mongo/: CMakeLists.txt
common/src/redis/: CMakeLists.txt
common/src/threadPool/: CMakeLists.txt  thread_pool.cpp  thread_pool.h
common/src/time_scheduler/: CMakeLists.txt  time_scheduler.cpp  time_scheduler.h
common/src/yamlParser/: CMakeLists.txt  yaml_parser.cpp  yaml_parser.h
common/tools/: grpc_cpp_plugin  protoc
pkg/: main_app
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  example_test.cpp
test/brpc_test/: CMakeLists.txt
test/grpc_test/: CMakeLists.txt  grpc_client.cpp  grpc_server.cpp
test/grpc_test/proto/: echo.grpc.pb.cc  echo.grpc.pb.h  echo.pb.cc  echo.pb.h  echo.proto  makefile
test/gtest_test/: CMakeLists.txt  basic_test.cpp
test/protobuf_test/: CMakeLists.txt  protobuf_test.cpp
test/protobuf_test/proto/: makefile  test.pb.cc  test.pb.h  test.proto
